--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover; */
-    border: 1px solid white;
+    border: 1px solid black;
     border-radius: 10px;
   }
   
@@ -94,7 +94,7 @@ body {
     margin-top: 20px;
     max-height: 100%;
     border-radius: 10px;
-    border: 1px solid white;
+    border: 1px solid black;
     box-shadow: 5px 10px black;
   }
   
@@ -113,7 +113,7 @@ body {
     margin-top: 20px;
     font-size: 12px;
     border-radius: 10px;
-    border: 1px white solid;
+    border: 1px black solid;
   }
   
   /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
@@ -124,4 +124,9 @@ body {
     }
   }
 
- 
+ h2 span  {
+  font: 100px; 
+  font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+  text-transform: uppercase;
+  margin-top: 10px;
+ } 
