--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,145 +1,153 @@
 body {
-    font-family: Arial;
-    padding: 20px;
-    background: #99badd;
-  }
-  
-  /* Header/Blog Title */
-  .header {
-    /* padding: 20px; */
-    font-size: 52px;
-    text-align: center;
-    font-family: 'Lora', serif;
-    /* color: white; */
-    /* text-shadow: black 4px 4px; */
-    letter-spacing: .15em;
-    background-color: #F5F5F5;
-    font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-    text-transform: uppercase;
-    text-rendering: optimizeLegibility;
-    color: #131313;
-    text-shadow: 
-      1px -1px 0 #767676, 
-      -1px 2px 1px #737272, 
-      -2px 4px 1px #767474, 
-      -3px 6px 1px #787777, 
-      -4px 8px 1px #7b7a7a, 
-      -5px 10px 1px #7f7d7d, 
-      -6px 12px 1px #828181, 
-      -7px 14px 1px #868585, 
-      -8px 16px 1px #8b8a89, 
-      -9px 18px 1px #8f8e8d, 
-      -10px 20px 1px #949392, 
-      -11px 22px 1px #999897, 
-      -12px 24px 1px #9e9c9c, 
-      -13px 26px 1px #a3a1a1, 
-      -14px 28px 1px #a8a6a6, 
-      -15px 30px 1px #adabab, 
-      -16px 32px 1px #b2b1b0, 
-      -17px 34px 1px #b7b6b5, 
-      -18px 36px 1px #bcbbba, 
-      -19px 38px 1px #c1bfbf, 
-      -20px 40px 1px #c6c4c4, 
-      -21px 42px 1px #cbc9c8, 
-      -22px 44px 1px #cfcdcd, 
-      -23px 46px 1px #d4d2d1, 
-      -24px 48px 1px #d8d6d5, 
-      -25px 50px 1px #dbdad9, 
-      -26px 52px 1px #dfdddc, 
-      -27px 54px 1px #e2e0df, 
-      -28px 56px 1px #e4e3e2;
-    /* background-image: url("https://businessnc.com/wp-content/uploads/2017/10/fayetteville-feature.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover; */
-    border: 1px solid black;
-    border-radius: 10px;
-  }
-  
-  /* Create two unequal columns that floats next to each other */
-  /* Left column */
-  .leftcolumn { 
-    float: left;
-    width: 70%;
-  }
-  
-  /* Right column */
-  .rightcolumn {
-    float: left;
-    width: 28%;
-    padding-left: 20px;
-  }
+  font-family: Arial;
+  padding: 20px;
+  background: #99badd;
+}
 
-  /* Navigation Menu */
-  #fakeMenu {
-    font-size: 18px;
-  }
-
-  /* Navigation Menu Options */
-  #a1 {
-    color: black
-  }
-  
-  /* About image */
-  .aboutimg {
-    background-color: #aaa;
-    width: 100%;
-    /* padding: 20px; */
-  }
-  
-  /* Add a card effect for articles */
-  .card {
-    background-color:	#F5F5F5;
-    padding: 20px;
-    margin-top: 20px;
-    max-height: 100%;
-    border-radius: 10px;
-    border: 1px solid black;
-    box-shadow: 5px 10px black;
-  }
-  
-  /* Clear floats after the columns */
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Footer */
-  .footer {
-    padding: 20px;
-    text-align: center;
-    background: #F5F5F5;
-    margin-top: 20px;
-    font-size: 12px;
-    border-radius: 10px;
-    border: 1px black solid;
-  }
-  
-  /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 800px) {
-    .leftcolumn, .rightcolumn { 
-      width: 100%;
-      padding: 0;
-    }
-  }
-
-  /* Modal */
-  #myModal  {
-    font-size: 12px;
-    word-spacing: none;
-    font: Arial;
-    border: 1px solid black;
-    border-radius: 10px;
-    background: #99badd;
-    /* width: 100%;
-    height: auto; */
-  }
-
- h2 span  {
-  font: 100px; 
+/* Header/Blog Title */
+.header {
+  /* padding: 20px; */
+  font-size: 52px;
+  text-align: center;
+  font-family: 'Lora', serif;
+  /* color: white; */
+  /* text-shadow: black 4px 4px; */
+  letter-spacing: .15em;
+  /* background-color: #F5F5F5; */
+  background-image: url("https://www.tanet.com/wp-content/uploads/2018/06/help-desk-banner-e1528304312147.jpg");
+  background-size: cover;
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
   text-transform: uppercase;
-  margin-top: 10px;
- } 
+  text-rendering: optimizeLegibility;
+  color: #131313;
+  text-shadow: 
+    1px -1px 0 #767676, 
+    -1px 2px 1px #737272, 
+    -2px 4px 1px #767474, 
+    -3px 6px 1px #787777, 
+    -4px 8px 1px #7b7a7a, 
+    -5px 10px 1px #7f7d7d, 
+    -6px 12px 1px #828181, 
+    -7px 14px 1px #868585, 
+    -8px 16px 1px #8b8a89, 
+    -9px 18px 1px #8f8e8d, 
+    -10px 20px 1px #949392, 
+    -11px 22px 1px #999897, 
+    -12px 24px 1px #9e9c9c, 
+    -13px 26px 1px #a3a1a1, 
+    -14px 28px 1px #a8a6a6, 
+    -15px 30px 1px #adabab, 
+    -16px 32px 1px #b2b1b0, 
+    -17px 34px 1px #b7b6b5, 
+    -18px 36px 1px #bcbbba, 
+    -19px 38px 1px #c1bfbf, 
+    -20px 40px 1px #c6c4c4, 
+    -21px 42px 1px #cbc9c8, 
+    -22px 44px 1px #cfcdcd, 
+    -23px 46px 1px #d4d2d1, 
+    -24px 48px 1px #d8d6d5, 
+    -25px 50px 1px #dbdad9, 
+    -26px 52px 1px #dfdddc, 
+    -27px 54px 1px #e2e0df, 
+    -28px 56px 1px #e4e3e2;
+  /* background-image: url("https://businessnc.com/wp-content/uploads/2017/10/fayetteville-feature.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; */
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn { 
+  float: left;
+  width: 70%;
+}
+
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 28%;
+  padding-left: 20px;
+}
+
+/* Navigation Menu */
+#fakeMenu {
+  font-size: 18px;
+}
+
+/* Navigation Menu Options */
+#a1 {
+  color: white;
+  background-color: rgba(0,0,0,0.3);
+  border-radius: 10px;
+  padding: 5px;
+  text-decoration: none;
+}
+
+/* About image */
+.aboutimg {
+  background-color: #aaa;
+  width: 100%;
+  /* padding: 20px; */
+}
+
+/* Add a card effect for articles */
+.card {
+  background-color:	rgb(19,41,75);
+  padding: 20px;
+  margin-top: 20px;
+  max-height: 100%;
+  border-radius: 10px;
+  border: 1px solid black;
+  box-shadow: 5px 10px black;
+  color: white;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: RGB(19,41,75);
+  color: white;
+  margin-top: 20px;
+  font-size: 12px;
+  border-radius: 10px;
+  border: 1px black solid;
+}
+
+/* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 800px) {
+  .leftcolumn, .rightcolumn { 
+    width: 100%;
+    padding: 0;
+  }
+}
+
+/* Modal */
+#myModal  {
+  font-size: 12px;
+  word-spacing: none;
+  font: Arial;
+  border: 1px solid black;
+  border-radius: 10px;
+  background: #99badd;
+  /* width: 100%;
+  height: auto; */
+}
+
+h2 span  {
+font: 100px; 
+font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+text-transform: uppercase;
+margin-top: 10px;
+} 
 
