--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,35 +21,64 @@ body {
   text-rendering: optimizeLegibility;
   color: #131313;
   text-shadow: 
-    1px -1px 0 #767676, 
-    -1px 2px 1px #737272, 
-    -2px 4px 1px #767474, 
-    -3px 6px 1px #787777, 
-    -4px 8px 1px #7b7a7a, 
-    -5px 10px 1px #7f7d7d, 
-    -6px 12px 1px #828181, 
-    -7px 14px 1px #868585, 
-    -8px 16px 1px #8b8a89, 
-    -9px 18px 1px #8f8e8d, 
-    -10px 20px 1px #949392, 
-    -11px 22px 1px #999897, 
-    -12px 24px 1px #9e9c9c, 
-    -13px 26px 1px #a3a1a1, 
-    -14px 28px 1px #a8a6a6, 
-    -15px 30px 1px #adabab, 
-    -16px 32px 1px #b2b1b0, 
-    -17px 34px 1px #b7b6b5, 
-    -18px 36px 1px #bcbbba, 
-    -19px 38px 1px #c1bfbf, 
-    -20px 40px 1px #c6c4c4, 
-    -21px 42px 1px #cbc9c8, 
-    -22px 44px 1px #cfcdcd, 
-    -23px 46px 1px #d4d2d1, 
-    -24px 48px 1px #d8d6d5, 
-    -25px 50px 1px #dbdad9, 
-    -26px 52px 1px #dfdddc, 
-    -27px 54px 1px #e2e0df, 
-    -28px 56px 1px #e4e3e2;
+    /* color: #767676 */
+    1px -1px 0 rgb(118,118,118, 0.4), 
+    /* color: #737272 */
+    -1px 2px 1px rgb(115, 114, 114, 0.4),
+     /* color: #767474 */
+    -2px 4px 1px rgb(118,116,116, 0.4), 
+    /* color #787777*/
+    -3px 6px 1px rgb(120,119,119, 0.4),
+    /* color: #7b7a7a*/ 
+    -4px 8px 1px rgb(123,122,122, 0.4),
+    /* color: #7f7d7d */ 
+    -5px 10px 1px rgb(127,125,125, 0.4),
+    /* color: #828181 */ 
+    -6px 12px 1px rgb(130,129,129, 0.4),
+    /* color: #868585 */ 
+    -7px 14px 1px rgb(134,133,133, 0.4), 
+    /* color: #8b8a89 */
+    -8px 16px 1px rgb(139,138,137, 0.4), 
+    /* color: #8f8e8d */
+    -9px 18px 1px rgb(143,142,141, 0.4),
+    /* color: #949392 */
+    -10px 20px 1px rgb(148,147,146, 0.4),
+    /* color: #999897 */ 
+    -11px 22px 1px rgb(153,152,151, 0.4), 
+    /* color: #9e9c9c */
+    -12px 24px 1px rgb(158,156,156, 0.4), 
+    /* color: #a3a1a1 */
+    -13px 26px 1px rgb(163,161,161, 0.4), 
+    /* color: #a8a6a6 */
+    -14px 28px 1px rgb(168,166,166, 0.4), 
+    /* color: #adabab */
+    -15px 30px 1px rgb(173,171,171, 0.4), 
+    /* color: #b2b1b0 */
+    -16px 32px 1px rgb(178,177,176, 0.4), 
+    /* color: #b7b6b5 */
+    -17px 34px 1px rgb(183,182,181, 0.4), 
+    /* color: #bcbbba */
+    -18px 36px 1px rgb(188,187,186, 0.4), 
+    /* color: #c1bfbf */
+    -19px 38px 1px rgb(193,191,191, 0.4), 
+    /* color: #c6c4c4 */
+    -20px 40px 1px rgb(198,196,196, 0.4), 
+    /* color: #cbc9c8 */
+    -21px 42px 1px rgb(203,201,200, 0.4), 
+    /* color: #cfcdcd */
+    -22px 44px 1px rgb(207,205,205, 0.4), 
+    /* color: #d4d2d1 */
+    -23px 46px 1px rgb(212,210,209, 0.4), 
+    /* color: #d8d6d5 */
+    -24px 48px 1px rgb(216,214,213, 0.4),
+    /* color: #dbdad9 */ 
+    -25px 50px 1px rgb(219,218,217, 0.4), 
+    /* color: #dfdddc */
+    -26px 52px 1px rgb(223,221,220, 0.4), 
+    /* color: #e2e0df */
+    -27px 54px 1px rgb(226,224,223, 0.4), 
+    /* color: #e4e3e2 */
+    -28px 56px 1px rgb(228,227,226, 0.4);
   /* background-image: url("https://businessnc.com/wp-content/uploads/2017/10/fayetteville-feature.jpg");
   background-repeat: no-repeat;
   background-position: center;
