--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,12 @@ body  {
   text-decoration: none;
 }
 
+/* Modal Links */
+#a2 {
+  word-spacing: normal;
+  font-size: 10px;
+}
+
 /* About image */
 .aboutimg {
   background-color: #aaa;
