--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,6 +178,11 @@ body  {
   height: auto; */
 }
 
+h2  {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
 h2 span  {
 font: 100px; 
 font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
